Make sure controls are always visible

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -142,6 +142,7 @@ body {
   display: none;
   flex-direction: column;
   height: 25vh;
+  min-height: 227px;
   left: 0px;
   position: fixed;
   width: 100%;
